--- a/com_biblestudy/admin/models/forms/teacher.xml
+++ b/com_biblestudy/admin/models/forms/teacher.xml
@@ -19,7 +19,7 @@
             <option value="0">
                 JUNPUBLISHED
             </option>
-            <option value="-2">Thum
+            <option value="-2">
                 JTRASHED
             </option>
         </field>
@@ -51,9 +51,9 @@
                label="JBS_CMN_TITLE" description="JBS_TCH_TITLE_DESC"/>
         <field name="image" type="media" accept="image/*" label="JBS_TCH_TEACHER_IMAGE_LARGE" class="span10 small"/>
         <field name="teacher_image" type="hidden"/>
-        <field name="phone" type="text" class="inputbox" size="60"
+        <field name="phone" type="tel" class="inputbox" size="60"
                label="JBS_TCH_PHONE"/>
-        <field name="email" type="text" format="raw" size="50" label="JBS_TCH_EMAIL" description="JBS_TCH_EMAIL_DESC"/>
+        <field name="email" type="email" format="raw" size="50" label="JBS_TCH_EMAIL" description="JBS_TCH_EMAIL_DESC"/>
         <field name="website" type="text" class="inputbox" size="60"
                label="JBS_TCH_WEBSITE"/>
         <field name="short" type="editor" class="inputbox"
