--- a/com_biblestudy/admin/models/forms/message.xml
+++ b/com_biblestudy/admin/models/forms/message.xml
@@ -7,20 +7,26 @@
 		       key_field="id" value_field="server_name">
 			<option value="-1">JBS_CMN_SELECT_SERVER</option>
 		</field>
-		<field name="id" type="hidden" default="0" readonly="true"/>
+		<field name="id" type="text" class="readonly" label="JGLOBAL_FIELD_ID_LABEL"
+		       description="JGLOBAL_FIELD_ID_DESC" size="10" default="0"
+		       readonly="true"/>
 		<field name="published"
 		       type="list"
-		       class="span12 small"
+		       class="chzn-color-state"
 		       id="published"
 		       label="JSTATUS"
 		       description="JFIELD_PUBLISHED_DESC"
 		       default="1"
-		       filter="integer">
+		       size="1"
+		       filter="intval">
 			<option value="1">
 				JPUBLISHED
 			</option>
 			<option value="0">
 				JUNPUBLISHED
+			</option>
+			<option value="2">
+				JARCHIVED
 			</option>
 			<option value="-2">
 				JTRASHED
