--- a/com_biblestudy/admin/models/forms/templatecode.xml
+++ b/com_biblestudy/admin/models/forms/templatecode.xml
@@ -44,5 +44,5 @@
 	       section="style" validate="rules"/>
 	<field name="id" type="text" label="JGLOBAL_FIELD_ID_LABEL"
 	       description="JGLOBAL_FIELD_ID_DESC" size="10" default="0" readonly="true"
-	       class="readonly"/>
+	       class="readonly span12"/>
 </form>
