Change of Release Date and Code check.

--- a/com_biblestudy/admin/addons/servers/legacy/includes/js/jquery.ui.plupload/css/jquery.ui.plupload.css
+++ b/com_biblestudy/admin/addons/servers/legacy/includes/js/jquery.ui.plupload/css/jquery.ui.plupload.css
@@ -330,7 +330,7 @@
 	display: block;
 }
 
-.plupload_buttons, .plupload_upload_status {float: left}
+.plupload_buttons, .plupload_upload_status {float: left;}
 
 .plupload_message {
 	position: absolute;
