--- a/com_biblestudy/media/fancybox/helpers/jquery.fancybox-buttons.css
+++ b/com_biblestudy/media/fancybox/helpers/jquery.fancybox-buttons.css
@@ -31,7 +31,7 @@
 	background: -webkit-linear-gradient(top, rgb(68,68,68) 0%,rgb(52,52,52) 50%,rgb(41,41,41) 50%,rgb(51,51,51) 100%);
 	background: -o-linear-gradient(top, rgb(68,68,68) 0%,rgb(52,52,52) 50%,rgb(41,41,41) 50%,rgb(51,51,51) 100%);
 	background: -ms-linear-gradient(top, rgb(68,68,68) 0%,rgb(52,52,52) 50%,rgb(41,41,41) 50%,rgb(51,51,51) 100%);
-	background: linear-gradient(top, rgb(68,68,68) 0%,rgb(52,52,52) 50%,rgb(41,41,41) 50%,rgb(51,51,51) 100%);
+	background: linear-gradient(to bottom, rgb(68,68,68) 0%,rgb(52,52,52) 50%,rgb(41,41,41) 50%,rgb(51,51,51) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#222222',GradientType=0 );
 }
 
@@ -46,7 +46,9 @@
 	width: 30px;
 	height: 30px;
 	text-indent: -9999px;
-	background: transparent url('fancybox_buttons.png') no-repeat;
+	background-color: transparent;
+	background-image: url('fancybox_buttons.png');
+	background-repeat: no-repeat;
 	outline: none;
 	opacity: 0.8;
 }
@@ -76,7 +78,7 @@
 	background-position: 3px -60px;
 	border-left: 1px solid #111;
 	border-right: 1px solid #3e3e3e;
-	width: 35px;
+	width: 35px
 }
 
 #fancybox-buttons a.btnToggleOn {
