--- a/com_biblestudy/media/less/biblestudy.less
+++ b/com_biblestudy/media/less/biblestudy.less
@@ -553,4 +553,5 @@ p.popupfooter {
 // Used to affect boot strap and keep alignment in the display.
 .JBSM [class*="span"] {
   margin-left: 0;
+  display: inline-table;
   }
