--- a/com_biblestudy/admin/models/forms/admin.xml
+++ b/com_biblestudy/admin/models/forms/admin.xml
@@ -187,6 +187,7 @@
 		</field>
 		<field name="mtFrom" type="Mimetype" label="JBS_ADM_CHANGE_PLAYERS" description="JBS_ADM_MEDIATYPES_DESC" labelclass="control-label">
 			<option value="x">JBS_ADM_SELECT_NEW_OPTION</option>
+			<option value="http">URL</option>
 		</field>
 		<field name="mtTo" type="list" label="" labelclass="control-label">
 			<option value="x">JBS_ADM_SELECT_NEW_PLAYER</option>
