--- a/com_biblestudy/admin/models/forms/serie.xml
+++ b/com_biblestudy/admin/models/forms/serie.xml
@@ -32,6 +32,11 @@
 			<option value="1">JBS_CMN_SHOW_ABOVE_LANDING</option>
 			<option value="2">JBS_CMN_SHOW_BELOW_LANDING</option>
 		</field>
+		<field name="pc_show" type="radio" class="btn-group" default="0" label="JBS_ADM_SERIE_PC_SHOW"
+		               description="JBS_ADM_SERIE_PC_SHOW_DESC" labelclass="control-label">
+			<option value="0">JNO</option>
+			<option value="1">JYES</option>
+		</field>
 		<field name="teacher" type="sql" extension="com_biblestudy"
 		       label="JBS_CMN_TEACHER"
 		       query="SELECT id, teachername FROM #__bsms_teachers WHERE published = 1 ORDER by teachername ASC"
