Add Cleanup of backup files.

--- a/com_biblestudy/admin/models/forms/admin.xml
+++ b/com_biblestudy/admin/models/forms/admin.xml
@@ -342,6 +342,8 @@
 			<option value="0">JBS_CMN_NO</option>
 			<option value="1">JBS_CMN_YES</option>
 		</field>
+		<field name="filestokeep" type="text" default="5" rows="1" class="btn-group" labelclass="control-label"
+		       label="JBS_PLG_BACKUP_FILES" description="JBS_PLG_BACKUP_FILES_DESC"/>
 		<field name="debug" type="radio" default="0"
 		       label="JBS_ADM_DEBUG_LABEL" description="JBS_ADM_DEBUG_DESC"
 		       class="btn-group" labelclass="control-label">
