Upgrade DB Fixer. now corrects #__bsms_update and wording is corrected in output of stats.

--- a/com_biblestudy/media/less/biblestudy.less
+++ b/com_biblestudy/media/less/biblestudy.less
@@ -191,7 +191,16 @@ div.listingfooter {
   margin-bottom: 10px;
 }
 
-.bslisttable {
+.bsms_media_contaner {
+  div.bsms_media_file:not(:first-child) {
+	padding-left: 10px;
+	}
+  span.fa-play {
+	padding-right: 4px;
+	}
+  }
+
+.bsms_media_contaner {
   margin: 0;
   border-collapse: separate;
   .lastcol {
