--- a/com_biblestudy/media/less/biblestudy.less
+++ b/com_biblestudy/media/less/biblestudy.less
@@ -2,128 +2,128 @@
   margin: 0;
   border-collapse: separate;
   .bsm_studiestitlerow {
-	background-color: #666;
-  }
+	background-color: #666666;
+	}
   .teacheraddress {
 	text-align: left;
-  }
+	}
   .teacherwebsite {
 	text-align: left;
-  }
+	}
   .teacherfacebook {
 	text-align: left;
-  }
+	}
   .bsm_teachertwitter {
 	text-align: left;
-  }
+	}
   .bsm_teacherblog {
 	text-align: left;
-  }
+	}
   .bsm_teacherlink1 {
 	text-align: left;
-  }
+	}
   td {
 	text-align: left;
 	padding: 0 5px 0 5px;
 	border: none;
-  }
+	}
   .titlerow {
 	border-bottom: thick;
-  }
+	}
   .title {
 	font-size: 18px;
 	font-weight: bold;
 	border-bottom: 3px solid #999999;
 	padding: 4px 0 4px 4px;
-  }
+	}
   .bsm_separator {
 	border-bottom: 1px solid #999999;
-  }
+	}
   .bsm_teachername {
 	font-weight: bold;
 	font-size: 14px;
 	color: #000000;
 	white-space: nowrap;
-  }
+	}
   .bsm_teacheremail {
 	font-weight: normal;
 	font-size: 11px;
-  }
+	}
   .bsm_teacherwebsite {
 	font-weight: normal;
 	font-size: 11px;
-  }
+	}
   .bsm_teacherphone {
 	font-weight: normal;
 	font-size: 11px;
-  }
+	}
   .bsm_short {
 	padding: 8px 4px 4px;
-  }
+	}
   .bsm_titletitle {
 	font-weight: bold;
 	color: #ffffff;
-  }
+	}
   .bsm_titlescripture {
 	font-weight: bold;
 	color: #ffffff;
-  }
+	}
   .bsm_titledate {
 	font-weight: bold;
 	color: #ffffff;
-  }
+	}
   .bsm_teacherlong {
 	padding: 8px 4px 4px;
 	border-bottom: 1px solid #999999;
-  }
+	}
   tr.bsodd {
 	background-color: #ffffff;
 	border-bottom: 1px solid #999999;
-  }
+	}
   tr.bseven {
 	background-color: #fffff0;
 	border-bottom: 1px solid #999999;
-  }
+	}
   .lastrow {
 	td {
 	  border-bottom: 1px solid grey;
 	  padding-bottom: 7px;
 	  padding-top: 7px;
+	  }
 	}
-  }
   .bsm_teacherfooter {
 	border-top: 1px solid #999999;
 	padding: 4px 1px 1px 4px;
+	}
   }
-}
 
 /* New Landing Page CSS */
 .landingtable {
   clear: both;
   width: auto;
   display: table;
-}
+  }
 
 .landingrow {
   display: inline;
   padding: 1em;
-}
+  }
 
 .landingcell {
   display: table-cell;
-}
+  }
 
 .landinglink {
   a {
 	display: inline;
+	}
   }
-}
 
 .podcastsubscribe {
   clear: both;
   display: table;
   width: 100%;
-  background-color: #eee;
+  background-color: #eeeeee;
   border-radius: 15px 15px 15px 15px;
   border: 1px solid grey;
   padding: 1em;
@@ -136,13 +136,13 @@
 	  position: relative;
 	  right: 50px;
 	  bottom: -10px;
+	  }
 	}
-  }
   .prow {
 	display: table-row;
 	width: auto;
 	clear: both;
-  }
+	}
   .pcell {
 	display: table-cell;
 	float: left;
@@ -152,8 +152,8 @@
 	padding: 1em;
 	margin-right: 5px;
 	margin-left: 0 !important;
+	}
   }
-}
 
 /* Listing Page Items */
 .podcastheader {
@@ -161,35 +161,35 @@
   h3 {
 	display: inline;
 	text-align: center;
+	}
   }
-}
 
 .fltlft {
   float: left;
   padding-right: 5px;
-}
+  }
 
 div.listingfooter {
   ul {
 	li {
 	  list-style: none outside none;
+	  }
 	}
   }
-}
 
 #listingfooter li, #listingfooter ul {
   display: inline;
-}
+  }
 
 #listintro p, #listintro td {
   margin: 0;
   font-weight: bold;
   color: black;
-}
+  }
 
 #bsdropdownmenu {
   margin-bottom: 10px;
-}
+  }
 
 .bsms_media_contaner {
   div.bsms_media_file:not(:first-child) {
@@ -205,322 +205,322 @@ div.listingfooter {
   border-collapse: separate;
   .lastcol {
 	border-right: grey 2px solid;
-  }
+	}
   .lastrow {
 	td {
 	  border-bottom: 2px solid grey;
 	  padding-bottom: 7px;
+	  }
 	}
-  }
   th {
 	background-color: #707070;
 	font-weight: bold;
 	color: white;
-  }
+	}
   th.firstrow {
 	border-bottom: grey 2px solid;
-  }
+	}
   tr.lastrow {
 	th {
 	  border-bottom: 2px solid grey;
 	  padding-bottom: 3px;
+	  }
 	}
-  }
   tr.bsodd {
 	td {
 	  background-color: #ffffff;
+	  }
 	}
-  }
   tr.bseven {
 	td {
 	  background-color: #fffff0;
+	  }
 	}
-  }
   .date {
 	white-space: nowrap;
 	font-size: 1.2em;
 	color: grey;
 	font-weight: bold;
-  }
+	}
   .scripture1 {
 	white-space: nowrap;
 	color: #c02121;
 	font-weight: bold;
-  }
+	}
   .scripture2 {
 	white-space: nowrap;
 	color: #c02121;
 	font-weight: bold;
-  }
+	}
   .title {
 	font-size: 1.2em;
 	color: #707070;
 	font-weight: bold;
-  }
+	}
   .series_text {
 	white-space: nowrap;
 	color: grey;
-  }
+	}
   .duration {
 	white-space: nowrap;
 	font-style: italic;
-  }
+	}
   .teacher {
 	white-space: nowrap;
-  }
+	}
   .location_text {
 	white-space: nowrap;
-  }
+	}
   .topic_text {
 	white-space: nowrap;
-  }
+	}
   .message_type {
 	white-space: nowrap;
-  }
+	}
   .jbsmedia {
 	white-space: nowrap;
-  }
+	}
   .store {
 	white-space: nowrap;
-  }
+	}
   .details-text {
 	white-space: nowrap;
-  }
+	}
   .details-pdf {
 	white-space: nowrap;
-  }
+	}
   .details-text-pdf {
 	white-space: nowrap;
-  }
+	}
   .detailstable {
 	td {
 	  border: none;
 	  padding: 0 2px 0 0;
+	  }
 	}
-  }
   .secondary_reference {
 	white-space: nowrap;
-  }
+	}
   .teacher-title-name {
 	white-space: nowrap;
-  }
+	}
   .submitted {
 	white-space: nowrap;
-  }
+	}
   .hits {
 	white-space: nowrap;
-  }
+	}
   .studynumber {
 	white-space: nowrap;
-  }
+	}
   .filesize {
 	white-space: nowrap;
-  }
+	}
   .custom {
 	white-space: nowrap;
-  }
+	}
   .commentshead {
 	font-size: 2em;
 	font-weight: bold;
-  }
+	}
   .thumbnail {
 	white-space: nowrap;
-  }
+	}
   .mediatable {
 	td {
 	  border: none;
 	  padding: 0 6px 0 0;
-	}
+	  }
 	span.bsfilesize {
 	  font-size: 0.6em;
 	  position: relative;
 	  bottom: 7px;
+	  }
 	}
   }
-}
 
 .bslisttable th, .bslisttable td {
   text-align: left;
   padding: 0 5px 0 5px;
   border: none;
-}
+  }
 
 .bslisttable .row1col1, .bslisttable .row2col1, .bslisttable .row3col1, .bslisttable .row4col1 {
   border-left: grey 2px solid;
-}
+  }
 
 .bslisttable th.row1col1, .bslisttable th.row1col2, .bslisttable th.row1col3, .bslisttable th.row1col4 {
   border-top: grey 2px solid;
   padding-top: 3px;
-}
+  }
 
 #bsmsmoduletable {
   margin: 0;
   border-collapse: separate;
   .lastcol {
 	border-right: grey 2px solid;
-  }
+	}
   .lastrow {
 	td {
 	  border-bottom: 2px solid grey;
 	  padding-bottom: 7px;
+	  }
 	}
-  }
   th {
 	background-color: #707070;
 	font-weight: bold;
 	color: white;
-  }
+	}
   th.firstrow {
 	border-bottom: grey 2px solid;
-  }
+	}
   tr.lastrow {
 	th {
 	  border-bottom: 2px solid grey;
 	  padding-bottom: 3px;
+	  }
 	}
-  }
   tr.bsodd {
 	td {
 	  background-color: #ffffff;
+	  }
 	}
-  }
   tr.bseven {
 	td {
 	  background-color: #fffff0;
+	  }
 	}
-  }
   .date {
 	white-space: nowrap;
 	font-size: 1.2em;
 	color: grey;
 	font-weight: bold;
-  }
+	}
   .scripture1 {
 	white-space: nowrap;
 	color: #c02121;
 	font-weight: bold;
-  }
+	}
   .scripture2 {
 	white-space: nowrap;
 	color: #c02121;
 	font-weight: bold;
-  }
+	}
   .title {
 	font-size: 1.2em;
 	color: #707070;
 	font-weight: bold;
-  }
+	}
   .series_text {
 	white-space: nowrap;
 	color: grey;
-  }
+	}
   .duration {
 	white-space: nowrap;
 	font-style: italic;
-  }
+	}
   .teacher {
 	white-space: nowrap;
-  }
+	}
   .location_text {
 	white-space: nowrap;
-  }
+	}
   .topic_text {
 	white-space: nowrap;
-  }
+	}
   .message_type {
 	white-space: nowrap;
-  }
+	}
   .jbsmedia {
 	white-space: nowrap;
-  }
+	}
   .store {
 	white-space: nowrap;
-  }
+	}
   .details-text {
 	white-space: nowrap;
-  }
+	}
   .details-pdf {
 	white-space: nowrap;
-  }
+	}
   .details-text-pdf {
 	white-space: nowrap;
-  }
+	}
   .detailstable {
 	td {
 	  border: none;
 	  padding: 0 2px 0 0;
+	  }
 	}
-  }
   .secondary_reference {
 	white-space: nowrap;
-  }
+	}
   .teacher-title-name {
 	white-space: nowrap;
-  }
+	}
   .submitted {
 	white-space: nowrap;
-  }
+	}
   .hits {
 	white-space: nowrap;
-  }
+	}
   .studynumber {
 	white-space: nowrap;
-  }
+	}
   .filesize {
 	white-space: nowrap;
-  }
+	}
   .custom {
 	white-space: nowrap;
-  }
+	}
   .commentshead {
 	font-size: 2em;
 	font-weight: bold;
-  }
+	}
   .thumbnail {
 	white-space: nowrap;
-  }
+	}
   .mediatable {
 	td {
 	  border: none;
 	  padding: 0 6px 0 0;
-	}
+	  }
 	span.bsfilesize {
 	  font-size: 0.6em;
 	  position: relative;
 	  bottom: 7px;
+	  }
 	}
   }
-}
 
 #bsmsmoduletable th, #bsmsmoduletable td {
   text-align: left;
   padding: 0 5px 0 5px;
   border: none;
-}
+  }
 
 #bsmsmoduletable .row1col1, #bsmsmoduletable .row2col1, #bsmsmoduletable .row3col1, #bsmsmoduletable .row4col1 {
   border-left: grey 2px solid;
-}
+  }
 
 #bsmsmoduletable th.row1col1, #bsmsmoduletable th.row1col2, #bsmsmoduletable th.row1col3, #bsmsmoduletable th.row1col4 {
   border-top: grey 2px solid;
   padding-top: 3px;
-}
+  }
 
 .landing_title {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 16px;
   font-weight: bold;
-}
+  }
 
 #landing_td {
   width: 33%;
-}
+  }
 
 .landing_separator {
   height: 15px;
-}
+  }
 
 #showhide {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
@@ -530,48 +530,48 @@ div.listingfooter {
   .showhideheadingbutton {
 	img {
 	  vertical-align: bottom;
+	  }
 	}
   }
-}
 
 .popupwindow {
   margin: 5px;
   text-align: center;
-}
+  }
 
 p.popuptitle {
   font-weight: bold;
   color: white;
-}
+  }
 
 // Footer Stuff
 .popupfooter {
   margin: 5px;
   text-align: center;
-}
+  }
 
 p.popupfooter {
   font-weight: bold;
   color: grey;
-}
+  }
 
-@color_1: #fff;
-@background_color_1: #000;
+@color_1: #ffffff;
+@background_color_1: #000000;
 
 .JBSM {
   [class*="span"] {
 	margin-left: 0;
 	display: inline-table;
+	}
   }
-}
 
 .jbsmimg {
   img {
 	border: none;
-  }
+	}
   width: 200px;
   height: 200px;
-}
+  }
 
 .effects {
   padding-left: 15px;
@@ -584,9 +584,9 @@ p.popupfooter {
 	  margin: 0;
 	  padding: 0;
 	  max-width: 100%;
+	  }
 	}
   }
-}
 
 .overlay {
   display: block;
@@ -598,7 +598,7 @@ p.popupfooter {
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
-}
+  }
 
 a.jbsmclose-overlay {
   display: block;
@@ -615,11 +615,11 @@ a.jbsmclose-overlay {
   text-align: center;
   background-color: @background_color_1;
   cursor: pointer;
-}
+  }
 
 a.jbsmclose-overlay.hidden {
   display: none;
-}
+  }
 
 a.expand {
   display: block;
@@ -627,7 +627,7 @@ a.expand {
   z-index: 100;
   width: 40px;
   height: 40px;
-  border: solid 5px #fff;
+  border: solid 5px #ffffff;
   text-align: center;
   color: @color_1;
   line-height: 30px;
@@ -638,7 +638,7 @@ a.expand {
   -ms-border-radius: 30px;
   -o-border-radius: 30px;
   border-radius: 30px;
-}
+  }
 
 p.expand {
   display: block;
@@ -647,7 +647,14 @@ p.expand {
   padding-left: 20px;
   text-align: center;
   color: @color_1;
-}
+  }
+
+.jw-controls, .jw-media, .jw-overlays, .jw-preview {
+  position: relative !important;
+  }
+.jwplayer {
+  block-size: inherit !important;
+  }
 
 #effect-1 {
   .overlay {
@@ -661,14 +668,14 @@ p.expand {
 	  right: 0;
 	  bottom: 20%;
 	  margin: 0 auto -30px auto;
+	  }
 	}
-  }
   .jbsmimg.hover {
 	.overlay {
 	  height: 100%;
+	  }
 	}
   }
-}
 
 #effect-2 {
   .overlay {
@@ -682,14 +689,14 @@ p.expand {
 	  right: 0;
 	  top: 50%;
 	  margin: -30px auto 0 auto;
+	  }
 	}
-  }
   .jbsmimg.hover {
 	.overlay {
 	  height: 100%;
+	  }
 	}
   }
-}
 
 #effect-3 {
   .overlay {
@@ -703,14 +710,14 @@ p.expand {
 	  bottom: 0;
 	  left: 50%;
 	  margin: auto 0 auto -30px;
+	  }
 	}
-  }
   .jbsmimg.hover {
 	.overlay {
 	  width: 100%;
+	  }
 	}
   }
-}
 
 #effect-4 {
   .overlay {
@@ -724,14 +731,14 @@ p.expand {
 	  bottom: 0;
 	  right: 50%;
 	  margin: auto -30px auto 0;
+	  }
 	}
-  }
   .jbsmimg.hover {
 	.overlay {
 	  width: 100%;
+	  }
 	}
   }
-}
 
 #effect-5 {
   .overlay {
@@ -757,8 +764,8 @@ p.expand {
 	  -moz-transition: all 0.5s;
 	  -o-transition: all 0.5s;
 	  transition: all 0.5s;
+	  }
 	}
-  }
   .jbsmimg.hover {
 	.overlay {
 	  opacity: 1;
@@ -770,10 +777,10 @@ p.expand {
 		-ms-border-radius: 30px;
 		-o-border-radius: 30px;
 		border-radius: 30px;
+		}
 	  }
 	}
   }
-}
 
 #effect-6 {
   .overlay {
@@ -792,8 +799,8 @@ p.expand {
 	  -moz-transition: all 0.5s;
 	  -o-transition: all 0.5s;
 	  transition: all 0.5s;
+	  }
 	}
-  }
   .jbsmimg.hover {
 	.overlay {
 	  opacity: 1;
@@ -801,10 +808,10 @@ p.expand {
 		top: 50%;
 		margin-top: -30px;
 		opacity: 1;
+		}
 	  }
 	}
   }
-}
 
 @media only screen and (max-width: 1100px) {
   .effects {
@@ -812,16 +819,16 @@ p.expand {
 	.jbsmimg {
 	  &:first-child {
 		margin-left: 0;
-	  }
+		}
 	  &:nth-child(2n) {
 		margin-right: 0;
-	  }
+		}
 	  &:last-child {
 		margin-right: 0;
+		}
 	  }
 	}
   }
-}
 
 @media only screen and (max-width: 520px) {
   .effects {
@@ -829,23 +836,23 @@ p.expand {
 	  width: 100%;
 	  &:nth-child(n) {
 		margin-right: 0;
-	  }
+		}
 	  &:first-child {
 		margin-left: 0;
-	  }
+		}
 	  &:nth-child(2n-1) {
 		margin-left: 0;
-	  }
+		}
 	  &:nth-child(2n) {
 		margin-right: 0;
-	  }
+		}
 	  &:last-child {
 		margin-right: 0;
-	  }
+		}
 	  img {
 		margin: 0 auto;
+		}
 	  }
 	}
   }
-}
 
