--- a/com_biblestudy/media/css/bsms.fancybox.css
+++ b/com_biblestudy/media/css/bsms.fancybox.css
@@ -1,28 +1,29 @@
 .fancybox-type-iframe .fancybox-nav {
-    width: 60px;
-}
+	width: 60px;
+	}
 
 .fancybox-type-iframe .fancybox-nav span {
-    visibility: visible;
-    opacity: 0.5;
-}
+	visibility: visible;
+	opacity: 0.5;
+	}
 
 .fancybox-type-iframe .fancybox-nav:hover span {
-    opacity: 1;
-}
+	opacity: 1;
+	}
 
 .fancybox-type-iframe .fancybox-next {
-    right: -60px;
-}
+	right: -60px;
+	}
 
 .fancybox-type-iframe .fancybox-prev {
-    left: -60px;
-}
+	left: -60px;
+	}
 
 .jwplayer {
-    color: #000000;
-}
+	color: #000000;
+	}
 
 #video_container {
-    display: inline-block !important;
-}
+	display: inline-block !important;
+	vertical-align: middle !important;
+	}
