--- a/com_biblestudy/media/css/token-input-facebook.css
+++ b/com_biblestudy/media/css/token-input-facebook.css
@@ -11,12 +11,12 @@ ul.token-input-list-facebook {
 	z-index: 999;
 	margin: 0;
 	padding: 0;
-	background-color: #fff;
-}
+	background-color: #ffffff;
+	}
 
 ul.token-input-list-facebook {
 	list-style-type: none;
-}
+	}
 
 ul.token-input-list-facebook li input {
 	border: 0;
@@ -24,7 +24,7 @@ ul.token-input-list-facebook li input {
 	padding: 3px 8px;
 	background-color: white;
 	margin: 2px 0;
-}
+	}
 
 li.token-input-token-facebook {
 	overflow: hidden;
@@ -32,7 +32,7 @@ li.token-input-token-facebook {
 	margin: 3px;
 	padding: 1px 3px;
 	background-color: #eff2f7;
-	color: #000;
+	color: #000000;
 	cursor: default;
 	border: 1px solid #ccd5e4;
 	font-size: 11px;
@@ -40,77 +40,77 @@ li.token-input-token-facebook {
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	float: left;
-}
+	}
 
 li.token-input-token-facebook p {
 	display: inline;
 	padding: 0;
 	margin: 0;
-}
+	}
 
 li.token-input-token-facebook span {
 	color: #a6b3cf;
 	margin-left: 5px;
 	font-weight: bold;
 	cursor: pointer;
-}
+	}
 
 li.token-input-selected-token-facebook {
 	background-color: #5670a6;
 	border: 1px solid #3b5998;
-	color: #fff;
-}
+	color: #ffffff;
+	}
 
 li.token-input-input-token-facebook {
 	float: left;
-}
+	}
 
 div.token-input-dropdown-facebook {
 	position: absolute;
 	width: 400px;
-	background-color: #fff;
+	background-color: #ffffff;
 	overflow: hidden;
-	border-left: 1px solid #ccc;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
+	border-left: 1px solid #cccccc;
+	border-right: 1px solid #cccccc;
+	border-bottom: 1px solid #cccccc;
 	cursor: default;
 	font-size: 11px;
 	font-family: Verdana, Geneva, sans-serif;
 	z-index: 1;
-}
+	}
 
 div.token-input-dropdown-facebook p {
 	margin: 0;
 	padding: 5px;
 	font-weight: bold;
-	color: #777;
-}
+	color: #777777;
+	}
 
 div.token-input-dropdown-facebook ul {
 	margin: 0;
 	padding: 0;
-}
+	}
 
 div.token-input-dropdown-facebook ul li {
-	background-color: #fff;
+	background-color: #ffffff;
 	padding: 3px;
-}
+	}
 
 div.token-input-dropdown-facebook ul li.token-input-dropdown-item-facebook {
-	background-color: #fff;
-}
+	background-color: #ffffff;
+	}
 
 div.token-input-dropdown-facebook ul li.token-input-dropdown-item2-facebook {
-	background-color: #fff;
-}
+	background-color: #ffffff;
+	}
 
 div.token-input-dropdown-facebook ul li em {
 	font-weight: bold;
 	font-style: normal;
-}
+	}
 
 div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-facebook {
 	background-color: #3b5998;
-	color: #fff;
-}
+	color: #ffffff;
+	}
 
