Update css and JS to work with new layout.

--- a/com_biblestudy/media/css/bsms.fancybox.css
+++ b/com_biblestudy/media/css/bsms.fancybox.css
@@ -25,5 +25,8 @@
 
 #video_container {
 	display: inline-block !important;
-	vertical-align: middle !important;
+	vertical-align: middle;
+	/** Needed for Android devices */
+	margin-top:50%;
+	bottom: 50%;
 	}
