--- a/com_biblestudy/admin/models/forms/admin.xml
+++ b/com_biblestudy/admin/models/forms/admin.xml
@@ -26,7 +26,7 @@
 			<option value="1">JBS_CMN_SHOW</option>
 		</field>
 		<field name="popular_limit" type="int" default="" size="3" label="JBS_ADM_POPULAR_LIMIT"
-		       description="JBS_ADM_POPULAR_LIMIT_DESC"/>
+		       description="JBS_ADM_POPULAR_LIMIT_DESC" labelclass="control-label"/>
 		<field name="character_filter" type="list" default="1" label="JBS_ADM_CHARACTER_FILTER"
 		       description="JBS_ADM_CHARACTER_FILTER_DESC" labelclass="control-label">
 			<option value="0">JBS_ADM_NO_FILTER</option>
@@ -64,7 +64,7 @@
 		</field>
 
 		<field name="download_button_text" type="text" default="Audio" label="JBS_ADDON_LEGACY_BUTTON_TEXT"
-		       description="JBS_ADDON_LEGACY_BUTTON_TEXT_DESC"/>
+		       description="JBS_ADDON_LEGACY_BUTTON_TEXT_DESC" labelclass="control-label"/>
 		<field name="download_button_type" type="list" class="inputbox" size="15" default=""
 		       label="JBS_ADDON_LEGACY_BUTTON_TYPE"
 		       description="JBS_ADDON_LEGACY_BUTTON_TYPE_DESC" labelclass="control-label">
@@ -76,7 +76,7 @@
 			<option value="btn-danger">JBS_MED_DANGER</option>
 		</field>
 		<field name="download_button_color" type="color" description="JBS_ADDON_LEGACY_BUTTON_COLOR_DESC"
-		       label="JBS_ADDON_LEGACY_BUTTON_COLOR"/>
+		       label="JBS_ADDON_LEGACY_BUTTON_COLOR" labelclass="control-label"/>
 		<field name="download_icon_type" type="list" class="inputbox" size="15" default=""
 		       label="JBS_ADDON_LEGACY_ICON_TYPE"
 		       description="JBS_ADDON_LEGACY_ICON_TYPE_DESC" labelclass="control-label">
@@ -235,57 +235,57 @@
 			</field>
 			<field name="jwplayer_key" type="text"
 			       label="JBS_ADM_JWPLAYER_KEY_LABEL" description=""
-			       class="inputbox span6"/>
+			       class="inputbox span6" labelclass="control-label"/>
 			<field name="jwplayer_cdn" type="text"
 			       label="JBS_ADM_JWPLAYER_CDN_LABEL" description=""
-			       class="inputbox span6" filter="row"/>
+			       class="inputbox span6" filter="row" labelclass="control-label"/>
 		</fieldset>
 		<fieldset name="jwplayer_pro_standard" label="JBS_ADM_PLAYER_ADMIN_LABLE"
 		          description="JBS_ADM_PLAYER_ADMIN_DESC">
 			<field name="jwplayer_image" type="media" label="JBS_ADM_JWPLAYER_IMAGE"
-			       description="JBS_ADM_JWPLAYER_IMAGE_DESC"/>
+			       description="JBS_ADM_JWPLAYER_IMAGE_DESC" labelclass="control-label"/>
 			<field name="jwplayer_skin" type="skin"
 			       label="JBS_ADM_JWPLAYER_SKIN"
 			       description="JBS_ADM_JWPLAYER_SKIN_DESC"
-			       default=""/>
+			       default="" labelclass="control-label"/>
 			<field name="jwplayer_autostart" type="radio"
 			       label="JBS_CMN_MEDIA_AUTOSTART"
 			       description="JBS_ADM_JWPLAYER_AUTOSTART_DESC"
-			       class="btn-group" default="false">
+			       class="btn-group" default="false" labelclass="control-label">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_playerresponsive" type="radio"
-			               label="JBS_CMN_MEDIA_RESPONSIVE"
-			               description="JBS_ADM_JWPLAYER_RESPONSIVE_DESC"
-			               class="btn-group" default="true">
+			       label="JBS_CMN_MEDIA_RESPONSIVE"
+			       description="JBS_ADM_JWPLAYER_RESPONSIVE_DESC"
+			       class="btn-group" default="true" labelclass="control-label">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_fallback" type="radio"
 			       label="JBS_ADM_JWPLAYER_FALLBACK"
 			       description="JBS_ADM_JWPLAYER_FALLBACK_DESC"
-			       class="btn-group" default="true">
+			       class="btn-group" default="true" labelclass="control-label">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_mute" type="radio"
 			       label="JBS_ADM_JWPLAYER_MUTE"
 			       description="JBS_ADM_JWPLAYER_MUTE_DESC"
-			       class="btn-group" default="false">
+			       class="btn-group" default="false" labelclass="control-label">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_stagevideo" type="radio"
 			       label="JBS_ADM_JWPLAYER_STAGE_VIDEO"
 			       description="JBS_ADM_JWPLAYER_STAGE_VIDEO_DESC"
-			       class="btn-group" default="false">
+			       class="btn-group" default="false" labelclass="control-label">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_primary" type="list" default="html5"
 			       label="JBS_ADM_JWPLAYER_PRIMARY"
-			       description="JBS_ADM_JWPLAYER_PRIMARY_DESC">
+			       description="JBS_ADM_JWPLAYER_PRIMARY_DESC" labelclass="control-label">
 				<option value="html5">JBS_ADM_JWPLAYER_PRIMARY_HTML5</option>
 				<option value="flash">JBS_ADM_JWPLAYER_PRIMARY_FLASH</option>
 			</field>
@@ -294,13 +294,13 @@
 		          description="JBS_ADM_PLAYER_ADMIN_DESC">
 			<field name="playlist" type="radio"
 			       label="JBS_ADM_JWPLAYER_PLAYLIST" description="JBS_ADM_JWPLAYER_PLAYLIST_DESC"
-			       class="btn-group" default="false">
+			       class="btn-group" default="false" labelclass="control-label">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_listbar" type="radio"
 			       label="JBS_ADM_JWPLAYER_LISTBAR" description="JBS_ADM_JWPLAYER_LISTBAR_DESC"
-			       class="btn-group" default="false">
+			       class="btn-group" default="false" labelclass="control-label">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
@@ -308,30 +308,30 @@
 			       label="JBS_ADM_JWPLAYER_LOGO" description="JBS_ADM_JWPLAYER_LOGO_DESC"/>
 			<field name="sharing" type="radio"
 			       label="JBS_ADM_JWPLAYER_SHARING" description="JBS_ADM_JWPLAYER_SHARING_DESC"
-			       class="btn-group" default="false">
+			       class="btn-group" default="false" labelclass="control-label">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_related" type="radio"
 			       label="JBS_ADM_JWPLAYER_RELATED" description="JBS_ADM_JWPLAYER_RELATED_DESC"
-			       class="btn-group" default="false">
+			       class="btn-group" default="false" labelclass="control-label">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
-			<field name="jwplayer_advertising" type="text" rows="20"
+			<field name="jwplayer_advertising" type="text" rows="20" class="inputbox" labelclass="control-label"
 			       label="JBS_ADM_JWPLAYER_ADVERTISING" description="JBS_ADM_JWPLAYER_ADVERTISING_DESC"/>
 			<field name="rtmp" type="text"
 			       label="JBS_ADM_JWPLAYER_RTMP" description="JBS_ADM_JWPLAYER_RTMP_DESC"
-			       class="readonly" default="Comming Soon"/>
+			       class="readonly" default="Comming Soon" labelclass="control-label"/>
 			<field name="ga" type="text"
 			       label="JBS_ADM_JWPLAYER_GOOGLE_ANALYTICS" description="JBS_ADM_JWPLAYER_GOOGLE_ANALYTICS_DESC"
-			       class="readonly" default="Comming Soon"/>
+			       class="readonly" default="Comming Soon" labelclass="control-label"/>
 			<field name="jwplayer_sitecatalyst" type="text"
 			       label="JBS_ADM_JWPLAYER_ADOBE_SITECATALYST" description="JBS_ADM_JWPLAYER_ADOBE_SITECATALYST_DESC"
-			       class="readonly" default="Comming Soon"/>
+			       class="readonly" default="Comming Soon" labelclass="control-label"/>
 			<field name="captions" type="radio"
 			       label="JBS_ADM_JWPLAYER_CAPTIONS" description="JBS_ADM_JWPLAYER_CAPTIONS_DESC"
-			       class="btn-group" default="false">
+			       class="btn-group" labelclass="control-label" default="false">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
@@ -359,15 +359,16 @@
 			<option value="-1">JBS_SELECT_IMAGE</option>
 		</field>
 		<field name="media_use_button_icon" label="JBS_ADDON_LEGACY_MEDIA_USE_BUTTON"
-		       description="JBS_ADDON_LEGACY_MEDIA_USE_BUTTON_DESC" class="inputbox" type="list" size="15" default="">
+		       description="JBS_ADDON_LEGACY_MEDIA_USE_BUTTON_DESC" class="inputbox" labelclass="control-label"
+		       type="list" size="15" default="">
 			<option value="">JBS_MED_NONE</option>
 			<option value="1">JBS_MED_BUTTON_ONLY</option>
 			<option value="2">JBS_MED_BUTTON_AND_ICON</option>
 			<option value="3">JBS_MED_ICON_ONLY</option>
 		</field>
 		<field name="media_button_text" type="text" default="Audio" label="JBS_ADDON_LEGACY_BUTTON_TEXT"
-		       description="JBS_ADDON_LEGACY_BUTTON_TEXT_DESC"/>
-		<field name="media_button_type" type="list" class="inputbox" size="15" default=""
+		       description="JBS_ADDON_LEGACY_BUTTON_TEXT_DESC" class="inputbox" labelclass="control-label"/>
+		<field name="media_button_type" type="list" class="inputbox" labelclass="control-label" size="15" default=""
 		       label="JBS_ADDON_LEGACY_BUTTON_TYPE"
 		       description="JBS_ADDON_LEGACY_BUTTON_TYPE_DESC">
 			<option value="btn-link">JBS_MED_NO_COLOR</option>
@@ -378,8 +379,8 @@
 			<option value="btn-danger">JBS_MED_DANGER</option>
 		</field>
 		<field name="media_button_color" type="color" description="JBS_ADDON_LEGACY_BUTTON_COLOR_DESC"
-		       label="JBS_ADDON_LEGACY_BUTTON_COLOR"/>
-		<field name="media_icon_type" type="list" class="inputbox" size="15" default=""
+		       label="JBS_ADDON_LEGACY_BUTTON_COLOR" class="inputbox" labelclass="control-label"/>
+		<field name="media_icon_type" type="list" class="inputbox" labelclass="control-label" size="15" default=""
 		       label="JBS_ADDON_LEGACY_ICON_TYPE"
 		       description="JBS_ADDON_LEGACY_ICON_TYPE_DESC">
 			<option value="fa fa-play">JBS_MED_PLAY</option>
@@ -391,12 +392,12 @@
 			<option value="1">JBS_MED_CUSTOM</option>
 		</field>
 		<field name="media_custom_icon" type="text" default="" label="JBS_ADDON_LEGACY_CUSTOM_ICON"
-		       description="JBS_ADDON_LEGACY_CUSTOM_ICON_DESC"/>
+		       description="JBS_ADDON_LEGACY_CUSTOM_ICON_DESC" class="inputbox" labelclass="control-label"/>
 		<field name="media_icon_text_size" type="text" default="24" label="JBS_ADDON_LEGACY_FONT_SIZE"
-		       description="JBS_ADDON_LEGACY_FONT_SIZE_DESC"/>
+		       description="JBS_ADDON_LEGACY_FONT_SIZE_DESC" class="inputbox" labelclass="control-label"/>
 		<field name="media_image" type="media" directory="biblestudy"
 		       label="JBS_CMN_IMAGE" description="JBS_MED_IMAGE_DESC"
-		       class="inputbox span6">
+		       class="inputbox span6" labelclass="control-label">
 		</field>
 	</fieldset>
 </form>
